# agent-app

./: README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci-cd.yml
api/: __init__.py  endpoints.py  exceptions.py  pydantic_models.py
api/tasks/: answer.py  consulte.py  execute.py
src/agents/: __init__.py  agent.py  consultant.py  executor.py  utils.py
src/config/prompts/: __init__.py  consultant.md  executor.md  utils.py
src/models/: sql_command.py
src/tasks/: __init__.py  utils.py
src/tasks/consulting/: consulte.py
src/tasks/executing/: __init__.py  execute.py
src/tools/: consultant.py  executor.py  utils.py
tests/: test_main.py
